crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-indexes_supplier_rand_13_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: supplier_rand_13"
---
+---------------+-------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: supplier.s_suppkey = Int64(9123)                                                                    |
|               |   TableScan: supplier projection=[s_suppkey, s_name, s_address, s_nationkey, s_phone, s_acctbal, s_comment] |
| physical_plan | CoalesceBatchesExec: target_batch_size=8192                                                                 |
|               |   FilterExec: s_suppkey@0 = 9123                                                                            |
|               |     RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                   |
|               |       SchemaCastScanExec                                                                                    |
|               |         BytesProcessedExec                                                                                  |
|               |           DataSourceExec: partitions=1, partition_sizes=[2]                                                 |
|               |                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------+
