crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-indexes_tpch_q10_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q10"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                     |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: revenue DESC NULLS FIRST, fetch=20                                                                                                                                                                                                                                                                                 |
|               |   Projection: customer.c_custkey, customer.c_name, sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount) AS revenue, customer.c_acctbal, nation.n_name, customer.c_address, customer.c_phone, customer.c_comment                                                                                                |
|               |     Aggregate: groupBy=[[customer.c_custkey, customer.c_name, customer.c_acctbal, customer.c_phone, nation.n_name, customer.c_address, customer.c_comment]], aggr=[[sum(lineitem.l_extendedprice * (Decimal128(Some(1),20,0) - lineitem.l_discount)) AS sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount)]] |
|               |       Projection: customer.c_custkey, customer.c_name, customer.c_address, customer.c_phone, customer.c_acctbal, customer.c_comment, lineitem.l_extendedprice, lineitem.l_discount, nation.n_name                                                                                                                        |
|               |         Inner Join: customer.c_nationkey = nation.n_nationkey                                                                                                                                                                                                                                                            |
|               |           Projection: customer.c_custkey, customer.c_name, customer.c_address, customer.c_nationkey, customer.c_phone, customer.c_acctbal, customer.c_comment, lineitem.l_extendedprice, lineitem.l_discount                                                                                                             |
|               |             Inner Join: orders.o_orderkey = lineitem.l_orderkey                                                                                                                                                                                                                                                          |
|               |               Projection: customer.c_custkey, customer.c_name, customer.c_address, customer.c_nationkey, customer.c_phone, customer.c_acctbal, customer.c_comment, orders.o_orderkey                                                                                                                                     |
|               |                 Inner Join: customer.c_custkey = orders.o_custkey                                                                                                                                                                                                                                                        |
|               |                   TableScan: customer projection=[c_custkey, c_name, c_address, c_nationkey, c_phone, c_acctbal, c_comment]                                                                                                                                                                                              |
|               |                   Projection: orders.o_orderkey, orders.o_custkey                                                                                                                                                                                                                                                        |
|               |                     Filter: orders.o_orderdate >= Date32("1993-10-01") AND orders.o_orderdate < Date32("1994-01-01")                                                                                                                                                                                                     |
|               |                       TableScan: orders projection=[o_orderkey, o_custkey, o_orderdate]                                                                                                                                                                                                                                  |
|               |               Projection: lineitem.l_orderkey, lineitem.l_extendedprice, lineitem.l_discount                                                                                                                                                                                                                             |
|               |                 Filter: lineitem.l_returnflag = LargeUtf8("R")                                                                                                                                                                                                                                                           |
|               |                   TableScan: lineitem projection=[l_orderkey, l_extendedprice, l_discount, l_returnflag]                                                                                                                                                                                                                 |
|               |           TableScan: nation projection=[n_nationkey, n_name]                                                                                                                                                                                                                                                             |
| physical_plan | SortPreservingMergeExec: [revenue@2 DESC], fetch=20                                                                                                                                                                                                                                                                      |
|               |   SortExec: TopK(fetch=20), expr=[revenue@2 DESC], preserve_partitioning=[true]                                                                                                                                                                                                                                          |
|               |     ProjectionExec: expr=[c_custkey@0 as c_custkey, c_name@1 as c_name, sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount)@7 as revenue, c_acctbal@2 as c_acctbal, n_name@4 as n_name, c_address@5 as c_address, c_phone@3 as c_phone, c_comment@6 as c_comment]                                             |
|               |       AggregateExec: mode=FinalPartitioned, gby=[c_custkey@0 as c_custkey, c_name@1 as c_name, c_acctbal@2 as c_acctbal, c_phone@3 as c_phone, n_name@4 as n_name, c_address@5 as c_address, c_comment@6 as c_comment], aggr=[sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount)]                            |
|               |         RepartitionExec: partitioning=Hash([c_custkey@0, c_name@1, c_acctbal@2, c_phone@3, n_name@4, c_address@5, c_comment@6], 32), input_partitions=32                                                                                                                                                                 |
|               |           AggregateExec: mode=Partial, gby=[c_custkey@0 as c_custkey, c_name@1 as c_name, c_acctbal@4 as c_acctbal, c_phone@3 as c_phone, n_name@8 as n_name, c_address@2 as c_address, c_comment@5 as c_comment], aggr=[sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount)]                                 |
|               |             ProjectionExec: expr=[c_custkey@1 as c_custkey, c_name@2 as c_name, c_address@3 as c_address, c_phone@4 as c_phone, c_acctbal@5 as c_acctbal, c_comment@6 as c_comment, l_extendedprice@7 as l_extendedprice, l_discount@8 as l_discount, n_name@0 as n_name]                                                |
|               |               HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(n_nationkey@0, c_nationkey@3)], projection=[n_name@1, c_custkey@2, c_name@3, c_address@4, c_phone@6, c_acctbal@7, c_comment@8, l_extendedprice@9, l_discount@10]                                                  |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                                                                       |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                     |
|               |                     DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                                                                                                                           |
|               |                 HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(o_orderkey@7, l_orderkey@0)], projection=[c_custkey@0, c_name@1, c_address@2, c_nationkey@3, c_phone@4, c_acctbal@5, c_comment@6, l_extendedprice@9, l_discount@10]                                             |
|               |                   RepartitionExec: partitioning=Hash([o_orderkey@7], 32), input_partitions=32                                                                                                                                                                                                                            |
|               |                     ProjectionExec: expr=[c_custkey@1 as c_custkey, c_name@2 as c_name, c_address@3 as c_address, c_nationkey@4 as c_nationkey, c_phone@5 as c_phone, c_acctbal@6 as c_acctbal, c_comment@7 as c_comment, o_orderkey@0 as o_orderkey]                                                                    |
|               |                       HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(o_custkey@1, c_custkey@0)], projection=[o_orderkey@0, c_custkey@2, c_name@3, c_address@4, c_nationkey@5, c_phone@6, c_acctbal@7, c_comment@8]                                                             |
|               |                         RepartitionExec: partitioning=Hash([o_custkey@1], 32), input_partitions=32                                                                                                                                                                                                                       |
|               |                           FilterExec: o_orderdate@2 >= 1993-10-01 AND o_orderdate@2 < 1994-01-01, projection=[o_orderkey@0, o_custkey@1]                                                                                                                                                                                 |
|               |                             SchemaCastScanExec                                                                                                                                                                                                                                                                           |
|               |                               BytesProcessedExec                                                                                                                                                                                                                                                                         |
|               |                                 DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                                                                                                                              |
|               |                         RepartitionExec: partitioning=Hash([c_custkey@0], 32), input_partitions=1                                                                                                                                                                                                                        |
|               |                           SchemaCastScanExec                                                                                                                                                                                                                                                                             |
|               |                             BytesProcessedExec                                                                                                                                                                                                                                                                           |
|               |                               DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                                                                                                                 |
|               |                   RepartitionExec: partitioning=Hash([l_orderkey@0], 32), input_partitions=32                                                                                                                                                                                                                            |
|               |                     FilterExec: l_returnflag@3 = R, projection=[l_orderkey@0, l_extendedprice@1, l_discount@2]                                                                                                                                                                                                           |
|               |                       SchemaCastScanExec                                                                                                                                                                                                                                                                                 |
|               |                         BytesProcessedExec                                                                                                                                                                                                                                                                               |
|               |                           DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                                                                                                                                    |
|               |                                                                                                                                                                                                                                                                                                                          |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
