crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-indexes_tpch_q11_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q11"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                             |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: value DESC NULLS FIRST                                                                                                                                                                                     |
|               |   Projection: partsupp.ps_partkey, sum(partsupp.ps_supplycost * partsupp.ps_availqty) AS value                                                                                                                   |
|               |     Filter: CAST(sum(partsupp.ps_supplycost * partsupp.ps_availqty) AS Decimal128(38, 15)) > (<subquery>)                                                                                                        |
|               |       Subquery:                                                                                                                                                                                                  |
|               |         Projection: CAST(CAST(sum(partsupp.ps_supplycost * partsupp.ps_availqty) AS Float64) * Float64(0.0001) AS Decimal128(38, 15))                                                                            |
|               |           Aggregate: groupBy=[[]], aggr=[[sum(partsupp.ps_supplycost * CAST(partsupp.ps_availqty AS Decimal128(20, 0)))]]                                                                                        |
|               |             Projection: partsupp.ps_availqty, partsupp.ps_supplycost                                                                                                                                             |
|               |               LeftSemi Join: supplier.s_nationkey = nation.n_nationkey                                                                                                                                           |
|               |                 Projection: partsupp.ps_availqty, partsupp.ps_supplycost, supplier.s_nationkey                                                                                                                   |
|               |                   Inner Join: partsupp.ps_suppkey = supplier.s_suppkey                                                                                                                                           |
|               |                     TableScan: partsupp projection=[ps_suppkey, ps_availqty, ps_supplycost]                                                                                                                      |
|               |                     TableScan: supplier projection=[s_suppkey, s_nationkey]                                                                                                                                      |
|               |                 Projection: nation.n_nationkey                                                                                                                                                                   |
|               |                   Filter: nation.n_name = LargeUtf8("GERMANY")                                                                                                                                                   |
|               |                     TableScan: nation projection=[n_nationkey, n_name]                                                                                                                                           |
|               |       Aggregate: groupBy=[[partsupp.ps_partkey]], aggr=[[sum(partsupp.ps_supplycost * CAST(partsupp.ps_availqty AS Decimal128(20, 0)))]]                                                                         |
|               |         Projection: partsupp.ps_partkey, partsupp.ps_availqty, partsupp.ps_supplycost                                                                                                                            |
|               |           LeftSemi Join: supplier.s_nationkey = nation.n_nationkey                                                                                                                                               |
|               |             Projection: partsupp.ps_partkey, partsupp.ps_availqty, partsupp.ps_supplycost, supplier.s_nationkey                                                                                                  |
|               |               Inner Join: partsupp.ps_suppkey = supplier.s_suppkey                                                                                                                                               |
|               |                 TableScan: partsupp projection=[ps_partkey, ps_suppkey, ps_availqty, ps_supplycost]                                                                                                              |
|               |                 TableScan: supplier projection=[s_suppkey, s_nationkey]                                                                                                                                          |
|               |             Projection: nation.n_nationkey                                                                                                                                                                       |
|               |               Filter: nation.n_name = LargeUtf8("GERMANY")                                                                                                                                                       |
|               |                 TableScan: nation projection=[n_nationkey, n_name]                                                                                                                                               |
| physical_plan | ScalarSubqueryExec: subqueries=1                                                                                                                                                                                 |
|               |   SortPreservingMergeExec: [value@1 DESC]                                                                                                                                                                        |
|               |     ProjectionExec: expr=[ps_partkey@0 as ps_partkey, sum(partsupp.ps_supplycost * partsupp.ps_availqty)@1 as value]                                                                                             |
|               |       SortExec: expr=[sum(partsupp.ps_supplycost * partsupp.ps_availqty)@1 DESC], preserve_partitioning=[true]                                                                                                   |
|               |         FilterExec: CAST(sum(partsupp.ps_supplycost * partsupp.ps_availqty)@1 AS Decimal128(38, 15)) > scalar_subquery(<pending>)                                                                                |
|               |           AggregateExec: mode=FinalPartitioned, gby=[ps_partkey@0 as ps_partkey], aggr=[sum(partsupp.ps_supplycost * partsupp.ps_availqty)]                                                                      |
|               |             RepartitionExec: partitioning=Hash([ps_partkey@0], 32), input_partitions=32                                                                                                                          |
|               |               AggregateExec: mode=Partial, gby=[ps_partkey@0 as ps_partkey], aggr=[sum(partsupp.ps_supplycost * partsupp.ps_availqty)]                                                                           |
|               |                 HashJoinExec: mode=CollectLeft, join_type=RightSemi, accumulator=MinMaxLeftAccumulator, on=[(n_nationkey@0, s_nationkey@3)], projection=[ps_partkey@0, ps_availqty@1, ps_supplycost@2]           |
|               |                   FilterExec: n_name@1 = GERMANY, projection=[n_nationkey@0]                                                                                                                                     |
|               |                     SchemaCastScanExec                                                                                                                                                                           |
|               |                       BytesProcessedExec                                                                                                                                                                         |
|               |                         DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                               |
|               |                   HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(s_suppkey@0, ps_suppkey@1)], projection=[ps_partkey@2, ps_availqty@4, ps_supplycost@5, s_nationkey@1] |
|               |                     SchemaCastScanExec                                                                                                                                                                           |
|               |                       BytesProcessedExec                                                                                                                                                                         |
|               |                         DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                               |
|               |                     SchemaCastScanExec                                                                                                                                                                           |
|               |                       BytesProcessedExec                                                                                                                                                                         |
|               |                         DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                              |
|               |   ProjectionExec: expr=[CAST(CAST(sum(partsupp.ps_supplycost * partsupp.ps_availqty)@0 AS Float64) * 0.0001 AS Decimal128(38, 15)) as sum(partsupp.ps_supplycost * partsupp.ps_availqty) * Float64(0.0001)]      |
|               |     AggregateExec: mode=Final, gby=[], aggr=[sum(partsupp.ps_supplycost * partsupp.ps_availqty)]                                                                                                                 |
|               |       CoalescePartitionsExec                                                                                                                                                                                     |
|               |         AggregateExec: mode=Partial, gby=[], aggr=[sum(partsupp.ps_supplycost * partsupp.ps_availqty)]                                                                                                           |
|               |           HashJoinExec: mode=CollectLeft, join_type=RightSemi, accumulator=MinMaxLeftAccumulator, on=[(n_nationkey@0, s_nationkey@2)], projection=[ps_availqty@0, ps_supplycost@1]                               |
|               |             FilterExec: n_name@1 = GERMANY, projection=[n_nationkey@0]                                                                                                                                           |
|               |               SchemaCastScanExec                                                                                                                                                                                 |
|               |                 BytesProcessedExec                                                                                                                                                                               |
|               |                   DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                     |
|               |             HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(s_suppkey@0, ps_suppkey@0)], projection=[ps_availqty@3, ps_supplycost@4, s_nationkey@1]                     |
|               |               SchemaCastScanExec                                                                                                                                                                                 |
|               |                 BytesProcessedExec                                                                                                                                                                               |
|               |                   DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                     |
|               |               SchemaCastScanExec                                                                                                                                                                                 |
|               |                 BytesProcessedExec                                                                                                                                                                               |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                                    |
|               |                                                                                                                                                                                                                  |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
